fix(theme): modify collapse-item border

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -128,7 +128,9 @@
   }
   .tiny-collapse-item {
     border-top-color: var(--te-common-border-bg-divider);
-    border-bottom: 0px;
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
     margin: 0;
   }
   .tiny-collapse-item__content {
